# Customer-Churn-Analysis

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ADVANCED_TRAINING.md  CONTRIBUTING.md  DIMENSION_REDUCTION.md  DIMENSION_REDUCTION_SUMMARY.md  Dockerfile  LICENSE  MODEL_ARTIFACT_SUMMARY.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  VISUALIZATIONS.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  train_model.py
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  logging_config.py
app/services/: data_processor.py  prediction_service.py
app/templates/: base.html  error.html  index.html  result.html
dev/: pyvenv.cfg
docs/: CI_CD.md  DOCKER.md  SETUP.md
ml_pipeline/: __init__.py  advanced_pipeline.py  data_ingestion.py  data_preprocessing.py  dimension_reduction.py  model_evaluator.py  model_trainer.py  model_visualizer.py  pipeline.py
ml_pipeline/core/: __init__.py  logging_config.py
models/: evaluation_report.json  model_comparison.json
src/: app.py
src/components/: data_ingestion.py  data_preprocessing.py  dimension_reduction.py  model_evaluator.py  model_trainer.py  model_visualizer.py
src/data/: data_processor.py
src/models/: model_trainer.py
src/pipeline/: advanced_pipeline.py  pipeline.py
src/visualization/: visualizer.py
tests/: test_data_ingestion.py
